@@ -2,6 +2,8 @@
 
   * Set Content-Type/Length in error responses from basic auth middleware.
 
+  * Added cascade middleware.
+
 = 0.5.10 / 2011-09-26
 
   * Use Content-Length: 0 for HEAD requests.
